<resources>
    <string name="app_name">Qiufg\'s App</string>

    <string name="navigation_home">首页</string>
    <string name="navigation_category">分类</string>
    <string name="navigation_note">笔记</string>
    <string name="navigation_mine">我的</string>
    <string name="title_home">美女们</string>
    <string name="title_category">gank.io</string>
    <string name="title_note">学习笔记</string>
    <string name="title_mine">关于我</string>

    <!-- 提示 -->
    <string name="hint_layout_no_data">亲，暂无数据</string>
    <string name="hint_layout_error_request">亲，请求出错了</string>
    <string name="hint_layout_error_network">亲，没有网络了</string>

    <string name="page_indicator">%1$d/%2$d</string>
    <string name="photo_preview_set_wallpaper">设为桌面背景</string>
    <string name="photo_preview_set_lockwrapper">设为锁屏背景</string>

    <string name="mine_select_theme_style">主题</string>
    <string name="mine_aidl">AIDL</string>
    <string name="mine_unknown">暂无</string>
    <string name="mine_setting">设置</string>

    <string name="dialog_loading_text">加载中&#8230;</string>
    <string name="aidl_input_money_hint">请输入金额</string>
    <string name="aidl_input_aidl_id_hint">ID</string>
    <string name="aidl_input_aidl_from_hint">From</string>
    <string name="aidl_input_aidl_content_hint">Content</string>
    <string name="aidl_input_aidl_add_bean">发邮件</string>
    <string name="aidl_input_aidl_get_bean">收邮件</string>
    <string name="aidl_input_aidl_sort">选择排序</string>
    <string name="aidl_input_aidl_sort_hint"><![CDATA[<数字>]]></string>
    <string name="aidl_input_aidl_message_hint">输入要加密内容</string>
    <string name="aidl_input_aidl_encrypt_hint">加密</string>
    <string name="aidl_input_aidl_decrypt_hint">解密</string>

    <string name="andfix_tip">把补丁拷贝到/sdcard/Android/data/com.qiufg.template/file目录下，并执行修复（补丁命名规则xxx_{目标版本的versionCode}.dex）</string>
    <string name="andfix_fix">修复</string>
    <string name="andfix_before">修复前</string>
    <string name="andfix_after">修复后</string>
</resources>
