<?xml version="1.0" encoding="utf-8"?>
<com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mine_bg"
    app:tr_head_height="640dp"
    app:tr_pureScrollMode_on="true"
    tools:context=".module.mine.view.MineFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/layout_toolbar_mine" />

            <View style="@style/Mine_Divider_Long" />

            <View
                style="@style/Mine_Divider_Long"
                android:layout_marginTop="12dp" />

            <com.qiufg.template.wedget.MineItemView
                android:id="@+id/select_theme_style"
                style="@style/Mine_Item"
                app:MIV_Icon="@drawable/mine_item_icon_theme"
                app:MIV_Text="@string/mine_select_theme_style"
                app:MIV_Text_Color="@color/mine_text" />

            <View
                style="@style/Mine_Divider_Long"
                android:layout_marginBottom="12dp" />

            <View style="@style/Mine_Divider_Long" />

            <com.qiufg.template.wedget.MineItemView
                android:id="@+id/aidl"
                style="@style/Mine_Item"
                app:MIV_Icon="@drawable/mine_item_icon_aidl"
                app:MIV_Text="@string/mine_aidl"
                app:MIV_Text_Color="@color/mine_text" />

            <View style="@style/Mine_Divider_Short" />

            <com.qiufg.template.wedget.MineItemView
                android:id="@+id/unknown1"
                style="@style/Mine_Item"
                app:MIV_Icon="@drawable/mine_item_icon_unknown1"
                app:MIV_Text="@string/mine_unknown"
                app:MIV_Text_Color="@color/mine_text" />

            <View style="@style/Mine_Divider_Short" />

            <com.qiufg.template.wedget.MineItemView
                android:id="@+id/unknown2"
                style="@style/Mine_Item"
                app:MIV_Icon="@drawable/mine_item_icon_unknown2"
                app:MIV_Text="@string/mine_unknown"
                app:MIV_Text_Color="@color/mine_text" />

            <View style="@style/Mine_Divider_Short" />

            <com.qiufg.template.wedget.MineItemView
                android:id="@+id/unknown3"
                style="@style/Mine_Item"
                app:MIV_Icon="@drawable/mine_item_icon_unknown3"
                app:MIV_Text="@string/mine_unknown"
                app:MIV_Text_Color="@color/mine_text" />

            <View
                style="@style/Mine_Divider_Long"
                android:layout_marginBottom="12dp" />

            <View style="@style/Mine_Divider_Long" />

            <com.qiufg.template.wedget.MineItemView
                android:id="@+id/setting"
                style="@style/Mine_Item"
                app:MIV_Icon="@drawable/mine_item_icon_setting"
                app:MIV_Text="@string/mine_setting"
                app:MIV_Text_Color="@color/mine_text" />

            <View
                style="@style/Mine_Divider_Long"
                android:layout_marginBottom="36dp" />

        </LinearLayout>
    </ScrollView>

</com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
